# RAG

./: .flake8  .gitignore  Makefile  README.md  chunker_retraite_anticipe.py  main.py  pyproject.toml  test.py
data/output/search_results/UnansweredQuestions/: dataset_docs_public.json
data/output/search_results_and_answer/UnansweredQuestions/: dataset_docs_public.json
data/processed/bm25_index/: data.csc.index.npy  indices.csc.index.npy  indptr.csc.index.npy  params.index.json  vocab.index.json
data/processed/chunks/: chunks.pkl
src/: __init__.py  __main__.py  chunker.py  evaluation.py  indexing.py  llm.py  main.py  pydantic.py
student/: __init__.py  __main__.py
student/src/: __main__.py  chunker.py  evaluation.py  indexing.py  llm.py  pydantic.py  retriever.py
